--- a/ClassroomManagement/.vscode/settings.json
+++ b/ClassroomManagement/.vscode/settings.json
@@ -6,6 +6,8 @@
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/junit-4.13.2.jar",
-        "lib/hamcrest-core-1.3.jar"
+        "lib/hamcrest-core-1.3.jar",
+        "lib/h2-2.2.224.jar" 
     ]
+
 }
