--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     "lib/**/*.jar"
   ],
   "terminal.integrated.fontFamily": "Consolas, 'Courier New', Arial, 'Segoe UI', monospace",
-  "terminal.integrated.setLocaleVariables": true
+  "terminal.integrated.setLocaleVariables": true,
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "java.compile.nullAnalysis.mode": "automatic"
 }
