--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
     		<version>4.13.2</version>
     		<scope>test</scope>
 		</dependency>
-
+		<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+            <scope>runtime</scope>
+        </dependency>
 	
  </dependencies>
 
