--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=quanlylophoc
-spring.application.name=OOP
 server.port=8080
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/OOP?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://avnadmin:AVNS_5uLOISM8Jd0cioLQl5q@mysql-3891dd28-oop-group-7.c.aivencloud.com:16202/defaultdb?ssl-mode=REQUIRED
 spring.datasource.username=root
-spring.datasource.password=hai120305
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
