--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=quanlylophoc
 server.port=8080
-
+spring.thymeleaf.cache=false
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://avnadmin:AVNS_5uLOISM8Jd0cioLQl5q@mysql-3891dd28-oop-group-7.c.aivencloud.com:16202/defaultdb?ssl-mode=REQUIRED
 spring.datasource.username=avnadmin
