--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=quanlylophoc
+server.address=0.0.0.0
 server.port=8080
 spring.thymeleaf.cache=false
 # MySQL Database Configuration
