--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 spring.application.name=quanlylophoc
 server.port=8080
-
+spring.thymeleaf.cache=false
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://avnadmin:AVNS_5uLOISM8Jd0cioLQl5q@mysql-3891dd28-oop-group-7.c.aivencloud.com:16202/defaultdb?ssl-mode=REQUIRED
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_5uLOISM8Jd0cioLQl5q
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect - bỏ đi cũng được, vì Hibernate tự động nhận diện dialect dựa trên URL kết nối
 # HikariCP Connection Pool
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=20
@@ -26,7 +25,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true 
 #new
 
